MyProject/force-app/main/default/objects/Appointment__c/fields/Appointment_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Cancel_Reason__c</fullName>
    <label>Appointment Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inaccurate Booking</fullName>
            </value>
            <value>
                <fullName>Incomplete Pre-requisites</fullName>
            </value>
            <value>
                <fullName>Facility Issue</fullName>
            </value>
            <value>
                <fullName>Doctors Are in Leave</fullName>
            </value>
            <value>
                <fullName>Scheduling Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>