MyProject/force-app/main/default/objects/Appointment__c/fields/Attending_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Attending_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>