MyProject/force-app/main/default/objects/Appointment__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Policy</label>
    <type>Checkbox</type>
</CustomField>